--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <td>Sem estoque</td>
         </tr>
         <tr>
-            <td>Bermuda</td>
+            <td>Calça Jeans</td>
             <td>Azul</td>
             <td>P</td>
             <td>R$ 160,00</td>
